--- a/fit.htm
+++ b/fit.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>NoBS</title>
+		<title>NoBS Files</title>
 	</head>
 	<style>
 	h1 {
@@ -58,6 +58,8 @@ table.fixed td { overflow: hidden; }
 						<font face="Candara" color="#ED0000" size="43"><b>NO BS</b></font>
 						<br>
 						<font face="Candara" color="#000000" size="3"><i>Simple File Uploader</i></font>
+						<br>
+												<font face="Candara" color="#000000" size="3"><i><small>louiejohnc@gmail.com</i></font>
 						<br>
 						<font face="Candara" color="#000000" size="3">&nbsp</font>
 					</td>
