--- a/fit.htm
+++ b/fit.htm
@@ -95,7 +95,7 @@ table.fixed td { overflow: hidden; }
 									<li>
 									<input type="text" class="outtxt" name="linkr" id="linkr" align = "center" size="80" class="field left" readonly/>
 								</li>
-								<button onclick="copyDURL()">Copy text</button>
+								<button onclick="copyDURL()">Copy text</button><br>
 										<font face="Candara" color="#000000" size="3"><i><small>louiejohnc@gmail.com</i></font>
 						<br>
 								<p>
